[package]
name = "gibfonts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
human_format = "1.0"
log = "0.4"
native-windows-gui = { version = "1.0", default_features = false, features = ["flexbox", "frame", "notice", "progress-bar", "image-decoder"] }
native-windows-derive = "1.0"
ureq = { version = "2.4", default_features = false, features = ["tls", "rustls-native-certs"] }
progress-streams = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplog = "1.3"
tempfile = "3.3"
zip-extract = { version = "0.1", default_features = false, features = ["deflate"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true